--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -19,15 +19,18 @@
 <main>
 <section id="inputSection">
   <form id="Dates">
-
-    <label for="days" class="nameLabel">Days</label>
-    <input id="days" name="days" type="number" placeholder="DD" required>
-
-    <label for="months" class="nameLabel">Month</label>
-    <input id="months" name="months" type="number" placeholder="MM" required>
-
-    <label for="years" class="nameLabel">Years</label>
-    <input id="years" name="years" type="number" placeholder="YYYY" min="1000" required>
+    <section class="times">
+      <label for="days" class="nameLabel">DAY</label>
+      <input id="days" name="days" type="number" placeholder="DD" class="numberInput" required>
+    </section>
+    <section class="times">
+      <label for="months" class="nameLabel">MONTH</label>
+      <input id="months" name="months" type="number" placeholder="MM" class="numberInput" required>
+    </section>
+    <section class="times">
+      <label for="years" class="nameLabel">YEAR</label>
+      <input id="years" name="years" type="number" placeholder="YYYY" min="1000" class="numberInput" required>
+    </section>
     <input type="submit" id="submit" value="">
   </form>
 </section> 
